changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

lib/adm/map_info, lib/adm/map_check:  Update to use new layout of installed
files (share/crossfire), know about random exits (it doesn't do any checking
to make sure the values are sane, which it probably should, but at least it
won't complain about them), update to use /usr/bin/perl.  MSW 7/25/2000

server/resurrection.c
include/spellist.h:  PeterM:  fixed a few unintended things about
resurrection:  experience removal was wrong, spellpoints/levels
changed.  --PetrM

lib/archetypes:  Update to keep in sync with arch tree.  Changes to
about a dozen arch's to remove the 'a' in their name.  MSW 6/27/2000

server/c_object.c: Fix command_drop which was doing incorrect check for
invisible object - it was supposed to skip over them and only do visible
objects, instead it was doing the reverse.  Fixes the 'drop command.
MSW 6/27/2000

server/input.c: Make the inventory command more robust for very long
object names - specify a maximum number of characters we will take from
the name.  Without this, you could get buffer overruns that cause crashes.
No normally generated items would ever likely have names long enough to
exploit this bug however.  MSW 6/27/2000

INSTALL, README:  Update mailing address to real-time address.  MSW  6/27/2000

server/login.c: Load and save usekeys value in player save file.  MSW 6/27/2000

Patch by Jeffry Hantin which fixes glow objects in map.
insert_ob_in_map_simple now will call the appropriate light updating code.
Applied by MSW 6/26/2000

server/player.c: check_pick():  Rewrite of this function to consistently